| Bug #13610 | Assert during sytem restart | ||
|---|---|---|---|
| Submitted: | 29 Sep 2005 16:47 | Modified: | 6 Oct 2005 20:12 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | |
| Assigned to: | Jonas Oreland | Target Version: | |
[6 Oct 2005 11:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/30747
[7 Oct 2005 15:11]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/30815

Description: assert occurs in SUMA during system restart How to repeat: 2-node cluster (mysql-test-run config) start cluster once and shutdown then start > ndbd > ndbd --initial node1 fails on assert in Suma.cpp ndbassert(handover_nodes.count() == 0 || m_gcp_complete_rep_count > handover_nodes.count());