bug#13610 - ndb   incorrectly computed m_gcp_complete_rep for partial start   gives assert in debug mode, and error in ndbapi in release

storage/ndb/src/kernel/blocks/suma/Suma.cpp:
  Compute no of gcp_complete_rep that Im contributioning correctly
    by computing distinct nodes of all the buckets im handling as if all were started